--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "es6-promise": "^4.0.5",
+    "exists-file": "^3.0.0",
     "google-tts-api": "0.0.1",
     "isomorphic-fetch": "^2.2.1",
     "mpg123": "^0.2.1",
