--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mpg123": "^0.2.1",
     "node-record-lpcm16": "^0.1.4",
+    "node-wit": "^4.3.0",
     "node-uuid": "^1.4.7",
     "request": "^2.79.0"
   },
